--- a/app/src/main/res/layout/activity_working.xml
+++ b/app/src/main/res/layout/activity_working.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="IT IS WORKING!"
+        android:text="IT&apos;S WORKING!"
         android:id="@+id/workingMessage"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
@@ -35,7 +35,7 @@
             android:id="@+id/smileFace"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.87"
-            android:src="@mipmap/smile" />
+            android:src="@drawable/checkMark" />
     </LinearLayout>
 
     <TextView
@@ -43,12 +43,22 @@
         android:layout_height="wrap_content"
         android:text="Instruction blah blah"
         android:id="@+id/instruction"
+        android:layout_marginTop="16dp"
         android:layout_below="@+id/workingMessage"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="48dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BACK "
+        android:id="@+id/button"
+        android:background="#1e502b"
+        android:textColor="#ffffff"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
