--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,20 @@
         android:layout_alignParentEnd="true"
         android:weightSum="1">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView"
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="274dp"
+            android:layout_gravity="center_horizontal">
 
-            android:src="@drawable/logo3"
-            android:layout_gravity="center_horizontal" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+
+                android:src="@drawable/logo3"
+                android:layout_gravity="center" />
+
+        </FrameLayout>
 
         <TextView
             android:layout_width="wrap_content"
