--- a/app/src/main/res/layout/activity_working.xml
+++ b/app/src/main/res/layout/activity_working.xml
@@ -41,24 +41,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Instruction blah blah"
+        android:text="Launch the app on Pebble"
         android:id="@+id/instruction"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="55dp"
+        android:textSize="25dp"
+        android:layout_gravity="center_horizontal"
         android:layout_below="@+id/workingMessage"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="back"
-        android:id="@+id/backButton"
-        android:background="#1e502b"
-        android:textColor="#ffffff"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
